--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ ecdsa==0.13
 enum34==1.1.6
 fastimport==0.9.4
 guessit==2.1.4
+guppy==0.1.10
 gyp==0.1
 hachoir-core==1.3.3
 hachoir-metadata==1.3.3
